--- a/GMatElastoPlasticQPot.pc.in
+++ b/GMatElastoPlasticQPot.pc.in
@@ -1,9 +1,7 @@
 prefix=@CMAKE_INSTALL_PREFIX@
-exec_prefix=${prefix}
+includedir=${prefix}/include
 
-Name: GMatElastoPlasticQPot
-Description: Elasto-plastic model using multiple quadratic potentials
-Requires:
+Name: @PROJECT_NAME@
+Description: Geometric statistics in C++/Python
 Version: @GMATELASTOPLASTICQPOT_VERSION@
-Libs:
-Cflags: -I${prefix}/@GMATELASTOPLASTICQPOT_INCLUDE_DIR@
+Cflags: -I${includedir}
