--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -39,6 +39,7 @@ install:
   - conda install numpy -c conda-forge
   - conda install pyxtensor -c conda-forge
   - conda install catch2 -c conda-forge
+  - conda install conda install clang clang-tools clangdev clangxx libclang python-clang -c conda-forge
   # Build/install the library
   - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON .
   - nmake
