Updating CMake & setup.py (#16)
* Updating CMake
* Updating Python build
* Making xsimd 'optional' for Python build: runs in xsimd is found
* Minor code-style updates

--- a/GMatElastoPlasticQPot.pc.in
+++ b/GMatElastoPlasticQPot.pc.in
@@ -1,9 +1,7 @@
 prefix=@CMAKE_INSTALL_PREFIX@
-exec_prefix=${prefix}
+includedir=${prefix}/include
 
-Name: GMatElastoPlasticQPot
-Description: Elasto-plastic model using multiple quadratic potentials
-Requires:
+Name: @PROJECT_NAME@
+Description: Elasto-plastic material model based on a manifold of quadratic potentials.
 Version: @GMATELASTOPLASTICQPOT_VERSION@
-Libs:
-Cflags: -I${prefix}/@GMATELASTOPLASTICQPOT_INCLUDE_DIR@
+Cflags: -I${includedir}
