--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,22 @@
 
 cmake_minimum_required(VERSION 3.0)
 
-# Options
-# =======
+# Basic settings
+# ==============
 
 project(GMatElastoPlasticQPot)
 
 option(BUILD_TESTS "${PROJECT_NAME} Build tests" OFF)
 
-# Internals
-# =========
-
-set(GMATELASTOPLASTICQPOT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
 # Version
 # =======
 
 file(
-    STRINGS "${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/config.h" GMatElastoPlasticQPot_version_defines
-    REGEX "#define GMATELASTOPLASTICQPOT_VERSION_(MAJOR|MINOR|PATCH)")
+    STRINGS
+        "${CMAKE_CURRENT_SOURCE_DIR}/include/GMatElastoPlasticQPot/config.h"
+        GMatElastoPlasticQPot_version_defines
+    REGEX
+        "#define GMATELASTOPLASTICQPOT_VERSION_(MAJOR|MINOR|PATCH)")
 
 foreach(ver ${GMatElastoPlasticQPot_version_defines})
     if(ver MATCHES "#define GMATELASTOPLASTICQPOT_VERSION_(MAJOR|MINOR|PATCH) +([^ ]+)$")
@@ -31,24 +29,18 @@ set(GMATELASTOPLASTICQPOT_VERSION
 
 message(STATUS "Building GMatElastoPlasticQPot v${GMATELASTOPLASTICQPOT_VERSION}")
 
-# Build
-# =====
+# Set target
+# ==========
 
-set(GMATELASTOPLASTICQPOT_HEADERS
-    ${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/Cartesian2d.h
-    ${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/Cartesian2d.hpp
-    ${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/Cartesian2d_Cusp.hpp
-    ${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/Cartesian2d_Elastic.hpp
-    ${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/Cartesian2d_Matrix.hpp
-    ${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/Cartesian2d_Smooth.hpp
-    ${GMATELASTOPLASTICQPOT_INCLUDE_DIR}/GMatElastoPlasticQPot/config.h)
+find_package(xtensor REQUIRED)
 
-add_library(${PROJECT_NAME} INTERFACE)
+add_library(GMatElastoPlasticQPot INTERFACE)
 
-target_include_directories(
-    ${PROJECT_NAME} INTERFACE
-    $<BUILD_INTERFACE:${GMATELASTOPLASTICQPOT_INCLUDE_DIR}>
-    $<INSTALL_INTERFACE:include>)
+target_include_directories(GMatElastoPlasticQPot INTERFACE
+    $<INSTALL_INTERFACE:include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+
+target_link_libraries(GMatElastoPlasticQPot INTERFACE xtensor)
 
 # Installation
 # ============
@@ -57,59 +49,59 @@ include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 
 install(
-    TARGETS ${PROJECT_NAME}
-    EXPORT ${PROJECT_NAME}-targets)
-
-export(
-    EXPORT ${PROJECT_NAME}-targets
-    FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
+    DIRECTORY
+        "${CMAKE_CURRENT_SOURCE_DIR}/include/"
+    DESTINATION
+        include)
 
 install(
-    FILES ${GMATELASTOPLASTICQPOT_HEADERS}
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
+    TARGETS
+        GMatElastoPlasticQPot
+    EXPORT
+        GMatElastoPlasticQPot-targets)
 
-set(GMATELASTOPLASTICQPOT_CMAKECONFIG_INSTALL_DIR
-    "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE
-    STRING "install path for ${PROJECT_NAME}Config.cmake")
+install(
+    EXPORT
+        GMatElastoPlasticQPot-targets
+    FILE
+        GMatElastoPlasticQPotTargets.cmake
+    DESTINATION
+        "${CMAKE_INSTALL_LIBDIR}/cmake/GMatElastoPlasticQPot")
 
-configure_package_config_file(
-    "GMatElastoPlasticQPotConfig.cmake.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
-    INSTALL_DESTINATION ${GMATELASTOPLASTICQPOT_CMAKECONFIG_INSTALL_DIR})
-
-set(_GMATELASTOPLASTICQPOT_CMAKE_SIZEOF_VOID_P ${CMAKE_SIZEOF_VOID_P})
-
+set(_GMATELASTOPLASTICQPOT ${CMAKE_SIZEOF_VOID_P})
 unset(CMAKE_SIZEOF_VOID_P)
 
 write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
-    VERSION ${GMATELASTOPLASTICQPOT_VERSION}
-    COMPATIBILITY AnyNewerVersion)
+        "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPotConfigVersion.cmake"
+    VERSION
+        ${GMATELASTOPLASTICQPOT_VERSION}
+    COMPATIBILITY
+        AnyNewerVersion)
 
-set(CMAKE_SIZEOF_VOID_P ${_GMATELASTOPLASTICQPOT_CMAKE_SIZEOF_VOID_P})
+set(CMAKE_SIZEOF_VOID_P ${_GMATELASTOPLASTICQPOT})
 
 install(
     FILES
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
-    DESTINATION ${GMATELASTOPLASTICQPOT_CMAKECONFIG_INSTALL_DIR})
-
-install(
-    EXPORT ${PROJECT_NAME}-targets
-    FILE "${PROJECT_NAME}Targets.cmake"
-    DESTINATION ${GMATELASTOPLASTICQPOT_CMAKECONFIG_INSTALL_DIR})
+        "${CMAKE_CURRENT_SOURCE_DIR}/GMatElastoPlasticQPotConfig.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPotConfigVersion.cmake"
+    DESTINATION
+        "${CMAKE_INSTALL_LIBDIR}/cmake/GMatElastoPlasticQPot")
 
 configure_file(
-    "GMatElastoPlasticQPot.pc.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
+    "${CMAKE_CURRENT_SOURCE_DIR}/GMatElastoPlasticQPot.pc.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPot.pc"
      @ONLY)
 
 install(
-    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
-    DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
+    FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPot.pc"
+    DESTINATION
+        "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
 
 # Add builds
 # ==========
+
+include("GMatElastoPlasticQPotConfig.cmake")
 
 if(BUILD_TESTS)
     add_subdirectory(test)
