--- a/.travis.yml
+++ b/.travis.yml
@@ -72,12 +72,12 @@ install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
-    - conda install cmake -c conda-forge
-    - conda install xtensor -c conda-forge
-    - conda install python -c conda-forge
-    - conda install numpy -c conda-forge
-    - conda install pyxtensor -c conda-forge
-    - conda install catch2 -c conda-forge
+    - conda install -c conda-forge cmake
+    - conda install -c conda-forge xtensor
+    - conda install -c conda-forge python
+    - conda install -c conda-forge numpy
+    - conda install -c conda-forge pyxtensor
+    - conda install -c conda-forge catch2
     - if [[ "$XSIMD" == "ON" ]]; then
         conda install xsimd -c conda-forge;
       fi
