Adding benchmark and trivial optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ cmake_minimum_required(VERSION 3.0)
 project(GMatElastoPlasticQPot)
 
 option(BUILD_TESTS "${PROJECT_NAME} Build tests" OFF)
+option(BUILD_EXAMPLES "${PROJECT_NAME} Build examples" OFF)
 
 # Version
 # =======
@@ -82,4 +83,8 @@ include("GMatElastoPlasticQPotConfig.cmake")
 
 if(BUILD_TESTS)
     add_subdirectory(test)
+endif()
+
+if(BUILD_EXAMPLES)
+    add_subdirectory(examples)
 endif()
