Enabling simd everywhere

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
                     - ubuntu-toolchain-r-test
                 packages:
                     - g++-5
-        env: COMPILER=gcc GCC=5
+        env: COMPILER=gcc GCC=5 XSIMD=ON
       - os: linux
         addons:
             apt:
@@ -19,7 +19,7 @@ matrix:
                     - ubuntu-toolchain-r-test
                 packages:
                     - g++-6
-        env: COMPILER=gcc GCC=6
+        env: COMPILER=gcc GCC=6 XSIMD=ON
       - os: linux
         addons:
             apt:
@@ -27,7 +27,7 @@ matrix:
                     - ubuntu-toolchain-r-test
                 packages:
                     - g++-7
-        env: COMPILER=gcc GCC=7
+        env: COMPILER=gcc GCC=7 XSIMD=ON
       - os: linux
         addons:
             apt:
@@ -36,10 +36,11 @@ matrix:
                     - llvm-toolchain-xenial-6.0
                 packages:
                     - clang-6.0
-        env: COMPILER=clang CLANG=6.0
+        env: COMPILER=clang CLANG=6.0 XSIMD=ON
       - os: osx
         osx_image: xcode8
         compiler: clang
+        env: XSIMD=ON
 env:
     global:
         - MINCONDA_VERSION="latest"
@@ -74,7 +75,7 @@ install:
     - conda install -c conda-forge mamba
     - mamba install -c conda-forge cmake xsimd xtensor python numpy pyxtensor catch2
     # Build/install the library
-    - cmake . -DBUILD_TESTS=ON
+    - cmake . -DBUILD_TESTS=ON -DXSIMD=$XSIMD
     - make
     - sudo make install
     - python setup.py build
