Updating benchmark Matrix

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,9 +8,11 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
 endif()
 
 option(WARNINGS "Show build warnings" ON)
-option(ASSERT "Enable assertions" ON)
+option(ASSERT "Enable assertions" OFF)
 
 file(GLOB APP_SOURCES *.cpp)
+
+set(CMAKE_BUILD_TYPE Release)
 
 foreach(testsourcefile ${APP_SOURCES})
 
