Fixing Python tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,24 +10,16 @@ matrix:
                 sources:
                     - ubuntu-toolchain-r-test
                 packages:
-                    - g++-5
-        env: COMPILER=gcc GCC=5
-      - os: linux
-        addons:
-            apt:
-                sources:
-                    - ubuntu-toolchain-r-test
-                packages:
-                    - g++-6
-        env: COMPILER=gcc GCC=6
-      - os: linux
-        addons:
-            apt:
-                sources:
-                    - ubuntu-toolchain-r-test
-                packages:
                     - g++-7
-        env: COMPILER=gcc GCC=7
+        env: COMPILER=gcc GCC=7 XSIMD=ON
+      - os: linux
+        addons:
+            apt:
+                sources:
+                    - ubuntu-toolchain-r-test
+                packages:
+                    - g++-8
+        env: COMPILER=gcc GCC=8 XSIMD=ON
       - os: linux
         addons:
             apt:
@@ -36,10 +28,11 @@ matrix:
                     - llvm-toolchain-xenial-6.0
                 packages:
                     - clang-6.0
-        env: COMPILER=clang CLANG=6.0
+        env: COMPILER=clang CLANG=6.0 XSIMD=ON
       - os: osx
         osx_image: xcode8
         compiler: clang
+        env: XSIMD=ON
 env:
     global:
         - MINCONDA_VERSION="latest"
@@ -74,7 +67,7 @@ install:
     - conda install -c conda-forge mamba
     - mamba install -c conda-forge cmake xtensor qpot python-qpot xsimd python numpy pyxtensor catch2
     # Build/install the library
-    - cmake . -DBUILD_TESTS=ON
+    - cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON -DXSIMD=$XSIMD
     - make
     - sudo make install
     - python setup.py build
