--- a/.travis.yml
+++ b/.travis.yml
@@ -78,5 +78,7 @@ script:
     - python test/Cartesian2d.py
     - python test/compare_versions/Cartesian2d_generate.py
     - python test/compare_versions/Cartesian2d_check_master.py
+    - mamba install -c conda-forge python-gmatelastoplasticqpot=0.6.2
+    - python test/compare_versions/Cartesian2d_check_v0.6.2.py
     - mamba install -c conda-forge python-gmatelastoplasticqpot=0.5.0
     - python test/compare_versions/Cartesian2d_check_v0.5.0.py
