--- a/.travis.yml
+++ b/.travis.yml
@@ -82,3 +82,9 @@ script:
     - python test/compare_versions/Cartesian2d_check_v0.6.2.py
     - mamba install -c conda-forge python-gmatelastoplasticqpot=0.5.0
     - python test/compare_versions/Cartesian2d_check_v0.5.0.py
+    - mamba install -c conda-forge python-gmatelastoplasticqpot=0.4.0
+    - python test/compare_versions/Cartesian2d_check_v0.4.0.py
+    - mamba install -c conda-forge python-gmatelastoplasticqpot=0.3.0
+    - python test/compare_versions/Cartesian2d_check_v0.3.0.py
+    - mamba install -c conda-forge python-gmatelastoplasticqpot=0.2.2
+    - python test/compare_versions/Cartesian2d_check_v0.2.2.py
